# aec-outlook-mcp

./: .gitignore  README.md  README_OLD.md  pyproject.toml  setup_venv.bat
aec_outlook_mcp/: __init__.py  __main__.py  attachment_parser.py  cli.py  email_indexer.py  server.py
outlook_mcp/: cli.py  config.py  email_indexer.py  outlook_reader.py  server.py
